# MinSync

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  action.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/setup-python-env/: action.yml
action/: comment.py  entrypoint.py
ai_instruction/: CLI_SPEC.md  E2E_TEST_PLAN.md  IMPLEMENTATION_CHECKLIST.md  USER_SCENARIOS.md
docs/: index.md  modules.md
minsync/: __init__.py  cli.py  core.py  factory.py  gitbackend.py  protocols.py
minsync/chunkers/: __init__.py  markdown.py  sliding_window.py
minsync/embedders/: __init__.py  langchain_adapter.py
minsync/vectorstores/: __init__.py  langchain_adapter.py  zvec_adapter.py
modules/: index.html
search/: search_index.json
tests/: conftest.py  mock_components.py  test_foo.py  test_integration.py  test_sync_advanced.py  test_sync_basic.py  test_sync_crash.py
tests/acceptance/: test_action_comment.py  test_error_messages.py  test_init.py  test_integration.py  test_parallel_embed.py  test_query.py  test_query_cli.py  test_retry.py  test_status_check_verify.py  test_sync_advanced.py  test_sync_crash.py  test_sync_stats.py  test_zvec_adapter.py
