[project]
name = "MinSync"
version = "0.0.1"
description = "Sync your git repository to searchable index. Fully based on git diff. No need extra DB."
authors = [{ name = "NomaDamas", email = "vkehfdl1@gmail.com" }]
readme = "README.md"
keywords = ['python']
dependencies = [
    "pygit2>=1.14.0",
    "pyyaml>=6.0",
]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://vkehfdl1.github.io/MinSync/"
Repository = "https://github.com/vkehfdl1/MinSync"
Documentation = "https://vkehfdl1.github.io/MinSync/"

[project.scripts]
minsync = "minsync.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",
    "deptry>=0.24.0",
    "ty>=0.0.14",

    "ruff>=0.14.14",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minsync"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside the exception class
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603", "S607", "TRY003", "RUF002"]
"minsync/core.py" = [
    # McCabe complexity — these methods are inherently multi-step
    "C90",
    # try-except-pass with explanatory comment
    "S110",
    # Nested if / ternary suggestions — clarity over brevity
    "SIM102", "SIM108",
    # Abstract raise to inner function — too pedantic
    "TRY301",
    # Shadowing builtins (all) — matches CLI arg naming
    "A002",
    # False positive hardcoded password — sync_token is not a secret
    "S106",
]

[tool.ruff.format]
preview = true
